# AudioManager

./: .gitignore  02__license_8dox.html  02__x__dependecies_8dox.html  02__y__versioning_8dox.html  03__architecture__overview_8dox.html  04__components_8dox.html  04__d__commonAPI_8dox.html  04__x__elements_8dox.html  04__y__audiomanager__and__sources_8dox.html  08__connections_8dox.html  09__lipsync_8dox.html  10__early__audio_8dox.html  11__views_8dox.html  14__u__last__user__mode_8dox.html  15__a__CommandLineParsing_8dox.html  15__dlt__support_8dox.html  15__x__eclipse_8dox.html  16__readme_8dox.html  AUTHORS  AudioManagerUtilities_2include_2TAmPluginTemplate_8h.html  AudioManagerUtilities_2include_2TAmPluginTemplate_8h_source.html  CAmCommandLineSingleton_8cpp_source.html  CAmCommandReceiver.cpp  CAmCommandReceiver.h  CAmCommandReceiver_8cpp.html  CAmCommandReceiver_8h.html  CAmCommandReceiver_8h_source.html  CAmCommandSender.cpp  CAmCommandSender.h  CAmCommandSender_8cpp_source.html  CAmCommandSender_8h.html  CAmCommandSender_8h_source.html  CAmCommonAPIWrapper_8cpp.html  CAmCommonAPIWrapper_8h.js  CAmControlReceiver.cpp  CAmControlReceiver.h  CAmControlReceiver_8cpp.js  CAmControlSender.cpp  CAmControlSender.h  CAmControlSender_8cpp.html  (+250 more)
AudioManGUI/: CMakeLists.txt  Doxyfile.in  audiomangui.cpp  audiomangui.h  audiomangui.ui  main.cpp  mainpage.h  popup_navi.ui  popup_ta.ui
AudioManagerCore/: CMakeLists.txt
AudioManagerCore/include/: CAmCommandReceiver.h  CAmCommandSender.h  CAmControlReceiver.h  CAmControlSender.h  CAmDatabaseHandlerMap.h  CAmGraph.h  CAmLog.h  CAmRouter.h  CAmRoutingReceiver.h  CAmRoutingSender.h  CAmTelnetServer.h  IAmDatabaseHandler.h
AudioManagerCore/src/: CAmCommandReceiver.cpp  CAmCommandSender.cpp  CAmControlReceiver.cpp  CAmControlSender.cpp  CAmDatabaseHandlerMap.cpp  CAmDatabaseObserver.cpp  CAmLog.cpp  CAmRouter.cpp  CAmRoutingReceiver.cpp  CAmRoutingSender.cpp  CAmTelnetMenuHelper.cpp
AudioManagerCore/test/: CAmCommonFunctions.cpp  CAmCommonFunctions.h  CMakeLists.txt  IAmCommandBackdoor.h  IAmRoutingBackdoor.h  MockIAmCommandSend.h  MockIAmControlSend.h  MockIAmRoutingSend.h
AudioManagerDaemon/: AudioManagerCore.cpp  AudioManagerCore.h  CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  CommandReceive.cpp  CommandReceive.h  DBusCommandInterface.cpp  DBusCommandInterface.h  DataBaseHandler.cpp  DataBaseHandler.h  FindDBUS.cmake  HookEngine.cpp  HookEngine.h  PluginHandler.cpp  PluginHandler.h  Router.cpp  Router.h  RoutingReceive.cpp  RoutingReceive.h  audioManagerIncludes.h  commandInterface.h  dataTypes.h  dbusRoothandler.cpp  dbusRoothandler.h  main.cpp  mainpage.h  pluginTemplate.h  routinginterface.cpp  routinginterface.h
AudioManagerDaemon/docx/: 01_mainpage.dox  02_license.dox  02_x_dependecies.dox  02_y_versioning.dox  03_architecture_overview.dox  03_x_uml_model.dox  04_components.dox  04_x_elements.dox  04_y_audiomanager_and_sources.dox  05_unique.dox  06_classification.dox  07_interrupts.dox  08_connections.dox  09_lipsync.dox  10_early_audio.dox  11_views.dox  12_volumes.dox  13_properties.dox  13_x_notifications.dox  14_misc.dox  14_x_mainloop.dox  14_y_watchdog.dox  14_z_nodeStateManagement.dox  15_dlt_support.dox  15_x_eclipse.dox  16_readme.dox  Doxyfile.in
AudioManagerDaemon/fidls/: AudioManagerTypes.fidl  NodeStateAccessStub_model_org.genivi.NodeStateManager.Consumer.fdepl  NodeStateAccessStub_model_org.genivi.NodeStateManager.Consumer.fidl  NodeStateAccessStub_model_org.genivi.NodeStateManager.LifecycleConsumer.fidl  NodeStateManager.fdepl  NodeStateManager.fidl  NodeStateManager_dbus.conf  amTypes.fidl
AudioManagerDaemon/include/: CAmCommandReceiver.h  CAmCommandSender.h  CAmControlReceiver.h  CAmControlSender.h  CAmDatabaseHandler.h  CAmDatabaseHandlerInterface.h  CAmDatabaseHandlerMap.h  CAmDatabaseHandlerSQLite.h  CAmDatabaseObserver.h  CAmGraph.h  CAmLog.h  CAmMapHandler.h  CAmNodeStateCommunicator.h  CAmNodeStateCommunicatorCAPI.h  CAmNodeStateCommunicatorDBus.h  CAmRouter.h  CAmRoutingReceiver.h  CAmRoutingSender.h  CAmTelnetMenuHelper.h  CAmTelnetServer.h  CAmWatchdog.h  CommandReceiver.h  CommandSender.h  ControlLoader.h  ControlReceiver.h  ControlSender.h  DAmDoxygenMainPage.h  DatabaseHandler.h  DatabaseObserver.h  IAmDatabaseHandler.h  Observer.h  PluginTemplate.h  Router.h  RoutingReceiver.h  RoutingSender.h  SocketHandler.h  TAmPluginTemplate.h  TelnetServer.h  mainpage.h  pluginTemplate.h
AudioManagerDaemon/src/: CAmCommandReceiver.cpp  CAmCommandSender.cpp  CAmCommonAPIWrapper.cpp  CAmControlReceiver.cpp  main.cpp  (+34 more)
AudioManagerUtilities/: CMakeLists.txt
PlayerGUI/: CMakeLists.txt  Doxyfile.in  main.cpp  mainpage.h  player.cpp  player.h  playerGui.cpp  playerGui.h  playergui.ui
PluginCommandInterfaceCAPI/: CMakeLists.txt
PluginCommandInterfaceDbus/: CMakeLists.txt  CommandDbusReceive.cpp  CommandDbusReceive.h  CommandReceive.cpp  CommandReceive.h  DBUSIntrospection.cpp  DBUSMessageHandler.cpp  DBUSMessageHandler.h  DBUSTypes.h  DbusInterface.cpp  DbusInterface.h  DbusSend.cpp  DbusSend.h  headers.h
PluginControlInterface/: CMakeLists.txt  ControlSender.cpp  ControlSender.h
PluginHookStandard/: CMakeLists.txt  Doxyfile.in  StandardHook.cpp  StandardHook.h  mainpage.h
PluginRoutingInterfaceAsync/: CMakeLists.txt
PluginRoutingInterfaceCAPI/: CMakeLists.txt
PluginRoutingInterfaceDbus/: AudiomanagerInterface.cpp  AudiomanagerInterface.h  CMakeLists.txt  DBUSIntrospection.cpp  DBUSIntrospection.h  DBUSMessageHandler.cpp  DBUSMessageHandler.h  DBUSTypes.h  DBusInterface.cpp  DBusInterface.h  DbusInterface.cpp  DbusInterface.h  DbusSend.cpp  Doxyfile.in  RoutingSend.cpp  RoutingSend.h  RoutingSender.cpp  headers.h  mainpage.h
PluginRoutingInterfaceJack/: CMakeLists.txt  Doxyfile.in  JackAudioController.cpp  JackAudioController.h  RoutingSend.cpp  RoutingSend.h  mainpage.h
PluginStructuralTest/: CMakeLists.txt  Doxyfile.in  Test.cpp  Test.h  mainpage.h
pluginRoutingInterfaceTCP/: CMakeLists.txt  RoutingSend.cpp  RoutingSend.h  TcpServer.cpp  TcpServer.h  tcpClient.cpp  tcpClient.h
(+1158 files in other folders)
